style added in Html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akash-site</title>
+    <style>
+  body{background-color:red;}
+   h1{ color:blue;}
+   p{ color:yellow;}
+
+    </style>
+
+    
+
 </head>
 <body>
-   Hi! I am Akash!
+  <h1>Hi! I am Akash!</h1> 
+   <p>I have done Graduation from Electronics and communication Engineering from <br>
+      State Engineering Govt college in Madhya pradesh.<br>
+              </p>
 </body>
 </html>
