doc added a photo

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Akash-site</title>
-    <style>
+  
+  <style>
   body{background-color:red;}
    h1{ color:blue;}
    p{ color:yellow;}
@@ -19,5 +20,6 @@
    <p>I have done Graduation from Electronics and communication Engineering from <br>
       State Engineering Govt college in Madhya pradesh.<br>
               </p>
+    <img src="akash_img.jpg"
 </body>
 </html>
