feat alt attribute added in html

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
    <p>I have done Graduation from Electronics and communication Engineering from <br>
       State Engineering Govt college in Madhya pradesh.<br>
               </p>
-    <img src="akash_img.jpg"
+    <img src="akash_img.jpg" alt="Akash image">
 </body>
 </html>
